12-ingress/service-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-lb
  namespace: blog-app
spec:
  selector:
    app: wordpress
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
