12-ingress/ingress-controllr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: blog.midominio.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-lb
            port:
              number: 80
      - path: /phpmyadmin
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
